--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "nunomaduro/larastan": "^3.5",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
