--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
+        "@flaticon/flaticon-uicons": "^3.3.1",
         "@fortawesome/fontawesome-free": "^6.7.2"
     }
 }
